--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:once": "cross-env CI=true env-cmd -f ./.env.test react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ."
+    "hooks:uninstall": "node node_modules/husky/husky.js uninstall",
+    "hooks:install": "node node_modules/husky/husky.js install",
+    "lint": "eslint .",
+    "prettier:check": "prettier --check 'src/**/*.js'",
+    "prettier:write": "prettier --write 'src/**/*.js'"
   },
   "browserslist": {
     "production": [
@@ -30,11 +35,18 @@
     ]
   },
   "devDependencies": {
+    "@commitlint/cli": "8.3.5",
+    "@commitlint/config-conventional": "8.3.4",
+    "cross-env": "7.0.2",
+    "env-cmd": "10.1.0",
     "eslint-config-airbnb": "18.1.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-import": "2.20.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.19.0",
+    "husky": "4.2.5",
+    "prettier": "2.0.5",
+    "pretty-quick": "2.0.1",
     "typescript": "3.8.3"
   }
 }
