--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "graasp-research",
   "version": "0.1.0",
   "private": true,
+  "author": "React EPFL",
+  "contributors": [
+    "Hagop Taminian",
+    "Juan Carlos Farah"
+  ],
   "dependencies": {
     "@material-ui/core": "4.9.13",
     "@material-ui/icons": "4.9.1",
