--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "google-map-react": "1.1.7",
     "i18next": "19.4.4",
     "prop-types": "15.7.2",
     "react": "^16.13.1",
@@ -21,7 +22,10 @@
     "react-ga": "2.7.0",
     "react-i18next": "11.4.0",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "recharts": "1.8.5",
+    "supercluster": "7.0.0",
+    "use-supercluster": "0.2.8"
   },
   "scripts": {
     "start": "react-scripts start",
