--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,6 @@
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
@@ -27,3 +23,10 @@ yarn-error.log*
 
 # sample data
 /src/data
+
+# environment files but not encrypted ones
+.env*
+!.env.*.encrypted
+
+# codeship keys
+*.aes
