--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
     "recharts": "1.8.5",
+    "standard-version": "8.0.0",
     "supercluster": "7.0.0",
     "use-supercluster": "0.2.8"
   },
@@ -38,7 +39,9 @@
     "hooks:install": "node node_modules/husky/husky.js install",
     "lint": "eslint .",
     "prettier:check": "prettier --check 'src/**/*.js'",
-    "prettier:write": "prettier --write 'src/**/*.js'"
+    "prettier:write": "prettier --write 'src/**/*.js'",
+    "release": "git add CHANGELOG.md && standard-version -a",
+    "release:first": "git add CHANGELOG.md && standard-version -a --first-release"
   },
   "browserslist": {
     "production": [
