--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
     "recharts": "1.8.5",
-    "standard-version": "8.0.0",
     "supercluster": "7.0.0",
     "use-supercluster": "0.2.8"
   },
@@ -32,6 +31,8 @@
     "start": "react-scripts start",
     "start:local": "PORT=80 react-scripts start",
     "build": "react-scripts build",
+    "build:dev": "env-cmd -f ./.env.dev yarn build",
+    "build:prod": "env-cmd -f ./.env.prod yarn build",
     "test": "react-scripts test",
     "test:once": "cross-env CI=true env-cmd -f ./.env.test react-scripts test",
     "eject": "react-scripts eject",
@@ -68,6 +69,7 @@
     "husky": "4.2.5",
     "prettier": "2.0.5",
     "pretty-quick": "2.0.1",
+    "standard-version": "8.0.0",
     "typescript": "3.8.3"
   }
 }
