--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-i18next": "11.4.0",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
+    "react-select": "3.1.0",
     "recharts": "1.8.5",
     "supercluster": "7.0.0",
     "use-supercluster": "0.2.8"
