--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "@material-ui/core": "4.9.13",
     "@material-ui/icons": "4.9.1",
     "@material-ui/lab": "4.0.0-alpha.52",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.3.2",
+    "@testing-library/user-event": "7.1.2",
     "google-map-react": "1.1.7",
     "i18next": "19.4.4",
     "lodash": "4.17.20",
     "prop-types": "15.7.2",
     "qs": "6.9.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-ga": "2.7.0",
     "react-i18next": "11.4.0",
     "react-router-dom": "5.1.2",
@@ -66,7 +66,7 @@
     "env-cmd": "10.1.0",
     "eslint-config-airbnb": "18.1.0",
     "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.19.0",
     "husky": "4.2.5",
