build: use yarn 3

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,11 @@ yarn-error.log*
 
 # codeship keys
 *.aes
+
+# yarn
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
