--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
   "plugins": [
     "import",
     "jsx-a11y",
-    "react"
+    "react",
+    "@babel"
   ],
   "env": {
     "browser": true,
@@ -19,7 +20,7 @@
     "cy": true,
     "Cypress": true
   },
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "rules": {
     "no-underscore-dangle": [
       "error",
@@ -54,5 +55,11 @@
       "propTypes": "static public field"
     }],
     "react/state-in-constructor": ["error", "never"]
+  },
+  "parserOptions": {
+    "requireConfigFile": false,
+    "babelOptions": {
+      "presets": ["@babel/preset-react"]
+   }
   }
 }
