--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "React EPFL",
   "contributors": [
     "Hagop Taminian",
-    "Juan Carlos Farah"
+    "Juan Carlos Farah",
+    "Kim Lan Phan Hoang"
   ],
   "dependencies": {
     "@material-ui/core": "4.9.13",
@@ -15,22 +16,23 @@
     "@testing-library/react": "9.3.2",
     "@testing-library/user-event": "7.1.2",
     "google-map-react": "1.1.7",
-    "i18next": "19.4.4",
-    "lodash": "4.17.20",
-    "prop-types": "15.7.2",
-    "qs": "6.9.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "i18next": "19.9.2",
+    "lodash": "4.17.21",
+    "prop-types": "15.8.1",
+    "qs": "6.10.3",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
     "react-ga": "2.7.0",
-    "react-i18next": "11.4.0",
-    "react-router-dom": "5.1.2",
+    "react-i18next": "11.15.3",
+    "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
-    "react-select": "3.1.0",
+    "react-select": "3.2.0",
     "recharts": "1.8.5",
-    "supercluster": "7.0.0",
-    "use-supercluster": "0.2.8"
+    "supercluster": "7.1.4",
+    "use-supercluster": "0.2.9"
   },
   "scripts": {
+    "pre-commit": "yarn prettier:check && yarn lint",
     "start": "react-scripts start",
     "start:local": "PORT=80 react-scripts start",
     "build": "react-scripts build",
@@ -39,13 +41,14 @@
     "test": "react-scripts test",
     "test:once": "cross-env CI=true env-cmd -f ./.env.test react-scripts test",
     "eject": "react-scripts eject",
-    "hooks:uninstall": "node node_modules/husky/husky.js uninstall",
-    "hooks:install": "node node_modules/husky/husky.js install",
+    "hooks:uninstall": "husky uninstall",
+    "hooks:install": "husky install",
     "lint": "eslint .",
     "prettier:check": "prettier --check 'src/**/*.js'",
     "prettier:write": "prettier --write 'src/**/*.js'",
     "release": "git fetch --tags && git add CHANGELOG.md && standard-version -a",
-    "release:first": "git fetch --tags && git add CHANGELOG.md && standard-version -a --first-release"
+    "release:first": "git fetch --tags && git add CHANGELOG.md && standard-version -a --first-release",
+    "postinstall": "husky install"
   },
   "browserslist": {
     "production": [
@@ -62,10 +65,10 @@
   "devDependencies": {
     "@babel/eslint-parser": "7.16.0",
     "@babel/eslint-plugin": "7.14.5",
-    "@commitlint/cli": "9.1.1",
-    "@commitlint/config-conventional": "9.1.1",
-    "@typescript-eslint/eslint-plugin": "5.2.0",
-    "cross-env": "7.0.2",
+    "@commitlint/cli": "9.1.2",
+    "@commitlint/config-conventional": "9.1.2",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "cross-env": "7.0.3",
     "env-cmd": "10.1.0",
     "eslint": "^7.31.0",
     "eslint-config-airbnb": "18.1.0",
@@ -76,11 +79,10 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "4.2.0",
-    "husky": "4.2.5",
-    "prettier": "2.0.5",
-    "pretty-quick": "2.0.1",
+    "husky": "^7.0.0",
+    "prettier": "2.5.1",
     "standard-version": "8.0.2",
-    "typescript": "3.8.3"
+    "typescript": "4.5.5"
   },
   "packageManager": "yarn@3.2.0-rc.2"
 }
