--- a/package.json
+++ b/package.json
@@ -12,21 +12,18 @@
     "@material-ui/core": "4.9.13",
     "@material-ui/icons": "4.9.1",
     "@material-ui/lab": "4.0.0-alpha.52",
-    "@testing-library/jest-dom": "4.2.4",
-    "@testing-library/react": "9.3.2",
-    "@testing-library/user-event": "7.1.2",
     "google-map-react": "1.1.7",
     "i18next": "19.9.2",
     "lodash": "4.17.21",
     "prop-types": "15.8.1",
     "qs": "6.10.3",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
-    "react-ga": "2.7.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-ga": "3.3.0",
     "react-i18next": "11.15.3",
-    "react-router-dom": "5.3.0",
-    "react-scripts": "4.0.3",
-    "react-select": "3.2.0",
+    "react-router-dom": "6.2.1",
+    "react-scripts": "5.0.0",
+    "react-select": "5.2.2",
     "recharts": "1.8.5",
     "supercluster": "7.1.4",
     "use-supercluster": "0.2.9"
@@ -63,23 +60,22 @@
     ]
   },
   "devDependencies": {
-    "@babel/eslint-parser": "7.16.0",
-    "@babel/eslint-plugin": "7.14.5",
+    "@babel/eslint-parser": "7.17.0",
+    "@babel/eslint-plugin": "7.16.5",
     "@commitlint/cli": "9.1.2",
     "@commitlint/config-conventional": "9.1.2",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.5.0",
+    "@testing-library/user-event": "7.2.1",
     "@typescript-eslint/eslint-plugin": "5.10.2",
     "cross-env": "7.0.3",
     "env-cmd": "10.1.0",
-    "eslint": "^7.31.0",
-    "eslint-config-airbnb": "18.1.0",
-    "eslint-config-prettier": "6.11.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "8.0.3",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.19.0",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "husky": "^7.0.0",
+    "eslint": "8.6.0",
+    "eslint-config-prettier": "6.15.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.28.0",
+    "husky": "7.0.0",
     "prettier": "2.5.1",
     "standard-version": "8.0.2",
     "typescript": "4.5.5"
