refactor: apply PR requested changes

--- a/package.json
+++ b/package.json
@@ -70,8 +70,10 @@
     "@typescript-eslint/eslint-plugin": "5.10.2",
     "cross-env": "7.0.3",
     "env-cmd": "10.1.0",
-    "eslint": "8.6.0",
+    "eslint": "8.9.0",
+    "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "6.15.0",
+    "eslint-config-react-app": "7.0.0",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.28.0",
