--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,8 @@
 {
   "extends": [
-    "prettier"
+    "airbnb",
+    "prettier", 
+    "react-app"
   ],
   "plugins": [
     "import",
@@ -18,16 +20,15 @@
   },
   "parser": "@babel/eslint-parser",
   "rules": {
-    "no-underscore-dangle": [
-      "error",
+    "import/no-named-as-default": 0,
+    "react/jsx-filename-extension": [
+      1,
       {
-        "allow": [
-          "_id",
-          "__REDUX_DEVTOOLS_EXTENSION__"
-        ]
+        "extensions": [".js", ".jsx"]
       }
     ],
-    "import/no-named-as-default": 0
+    "react/function-component-definition":  
+      [2, { "namedComponents": "arrow-function" }]
   },
   "parserOptions": {
     "requireConfigFile": false,
