--- a/.eslintrc
+++ b/.eslintrc
@@ -36,7 +36,8 @@
       }
     ],
     "react/function-component-definition":  
-      [2, { "namedComponents": "arrow-function" }]
+      [2, { "namedComponents": "arrow-function" }],
+    "no-console": [1, { "allow": ["error"] }]
   },
   "parserOptions": {
     "requireConfigFile": false,
