--- a/package.json
+++ b/package.json
@@ -41,16 +41,16 @@
   },
   "scripts": {
     "pre-commit": "yarn prettier:check && yarn lint",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "build:dev": "env-cmd -f ./.env.dev yarn build",
-    "dist": "env-cmd -f ./.env.prod yarn build",
-    "test": "react-scripts test",
-    "test:once": "cross-env CI=true env-cmd -f ./.env.test react-scripts test",
+    "start": "env-cmd -f ./.env.local react-app-rewired start",
+    "start:test": "env-cmd -f ./.env.test react-app-rewired start",
+    "start:ci": "react-app-rewired -r @cypress/instrument-cra start",
+    "build": "react-app-rewired build",
+    "dist": "env-cmd -f ./.env.production react-app-rewired build",
     "eject": "react-scripts eject",
     "hooks:uninstall": "husky uninstall",
     "hooks:install": "husky install",
     "lint": "eslint .",
+    "type-check": "tsc --noEmit",
     "prettier:check": "prettier --check 'src/**/*.js'",
     "prettier:write": "prettier --write 'src/**/*.js'",
     "release": "standard-version -a",
@@ -58,7 +58,9 @@
     "release:minor": "standard-version -a --release-as minor",
     "release:major": "standard-version -a --release-as major",
     "release:patch": "standard-version -a --release-as patch",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "cypress:open": "env-cmd -f ./.env.test cypress open",
+    "cypress:run": "env-cmd -f ./.env.test cypress run --headless --browser chrome --spec \"cypress/e2e/*.cy.ts\""
   },
   "browserslist": {
     "production": [
@@ -77,23 +79,34 @@
     "@babel/eslint-plugin": "7.17.7",
     "@commitlint/cli": "16.2.4",
     "@commitlint/config-conventional": "16.2.4",
+    "@cypress/code-coverage": "3.10.0",
+    "@cypress/instrument-cra": "1.4.0",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
     "@trivago/prettier-plugin-sort-imports": "3.2.0",
-    "@typescript-eslint/eslint-plugin": "5.23.0",
+    "@types/jest": "29.0.3",
+    "@types/node": "18.7.21",
+    "@typescript-eslint/eslint-plugin": "5.42.0",
+    "@typescript-eslint/parser": "5.42.0",
     "cross-env": "7.0.3",
+    "cypress": "11.0.1",
     "env-cmd": "10.1.0",
     "eslint": "8.15.0",
     "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "17.0.0",
     "eslint-config-prettier": "8.5.0",
+    "eslint-import-resolver-typescript": "3.5.1",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.29.4",
     "husky": "8.0.1",
+    "istanbul-lib-coverage": "3.2.0",
+    "nyc": "15.1.0",
     "prettier": "2.7.1",
+    "react-app-rewired": "2.2.1",
     "standard-version": "9.3.2",
-    "typescript": "4.6.4"
+    "typescript": "4.8.4"
   },
   "resolutions": {
     "@graasp/sdk": "github:graasp/graasp-sdk"
