--- a/package.json
+++ b/package.json
@@ -11,31 +11,31 @@
   "dependencies": {
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
-    "@graasp/query-client": "github:graasp/graasp-query-client",
-    "@graasp/sdk": "github:graasp/graasp-sdk",
-    "@graasp/ui": "github:graasp/graasp-ui#v0.3.0",
-    "@mui/icons-material": "5.10.9",
-    "@mui/lab": "5.0.0-alpha.107",
-    "@mui/material": "5.10.13",
-    "@sentry/react": "7.19.0",
-    "@sentry/tracing": "7.19.0",
-    "google-map-react": "2.1.10",
-    "i18next": "21.8.1",
-    "immutable": "4.0.0",
+    "@graasp/query-client": "0.1.4",
+    "@graasp/sdk": "0.3.0",
+    "@graasp/ui": "0.8.0",
+    "@mui/icons-material": "5.11.0",
+    "@mui/lab": "5.0.0-alpha.118",
+    "@mui/material": "5.11.7",
+    "@sentry/react": "7.36.0",
+    "@sentry/tracing": "7.36.0",
+    "google-map-react": "2.2.0",
+    "i18next": "22.4.9",
+    "immutable": "4.2.3",
     "lodash.capitalize": "4.2.1",
     "lodash.sortby": "4.7.0",
     "lodash.truncate": "4.4.2",
     "prop-types": "15.8.1",
-    "qs": "6.10.3",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-ga": "3.3.0",
-    "react-i18next": "11.16.9",
-    "react-router-dom": "6.3.0",
+    "qs": "6.11.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-ga": "3.3.1",
+    "react-i18next": "12.1.5",
+    "react-router-dom": "6.8.0",
     "react-scripts": "5.0.1",
-    "react-select": "5.3.2",
-    "react-toastify": "9.0.1",
-    "recharts": "2.1.9",
+    "react-select": "5.7.0",
+    "react-toastify": "9.1.1",
+    "recharts": "2.3.2",
     "supercluster": "7.1.5",
     "use-supercluster": "0.4.0"
   },
@@ -75,41 +75,42 @@
     ]
   },
   "devDependencies": {
-    "@babel/eslint-parser": "7.17.0",
-    "@babel/eslint-plugin": "7.17.7",
-    "@commitlint/cli": "16.2.4",
-    "@commitlint/config-conventional": "16.2.4",
+    "@babel/eslint-parser": "7.19.1",
+    "@babel/eslint-plugin": "7.19.1",
+    "@commitlint/cli": "17.4.2",
+    "@commitlint/config-conventional": "17.4.2",
     "@cypress/code-coverage": "3.10.0",
     "@cypress/instrument-cra": "1.4.0",
-    "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/react": "13.2.0",
-    "@testing-library/user-event": "14.2.0",
-    "@trivago/prettier-plugin-sort-imports": "3.2.0",
-    "@types/jest": "29.0.3",
-    "@types/node": "18.7.21",
-    "@typescript-eslint/eslint-plugin": "5.42.0",
-    "@typescript-eslint/parser": "5.42.0",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "14.4.3",
+    "@trivago/prettier-plugin-sort-imports": "4.0.0",
+    "@types/jest": "29.4.0",
+    "@types/node": "18.11.18",
+    "@typescript-eslint/eslint-plugin": "5.50.0",
+    "@typescript-eslint/parser": "5.50.0",
     "cross-env": "7.0.3",
-    "cypress": "11.0.1",
+    "cypress": "12.5.1",
     "env-cmd": "10.1.0",
-    "eslint": "8.15.0",
+    "eslint": "8.33.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "17.0.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-import-resolver-typescript": "3.5.1",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-react": "7.29.4",
-    "husky": "8.0.1",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-import-resolver-typescript": "3.5.3",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.1",
+    "husky": "8.0.3",
     "istanbul-lib-coverage": "3.2.0",
     "nyc": "15.1.0",
-    "prettier": "2.7.1",
+    "prettier": "2.8.3",
     "react-app-rewired": "2.2.1",
-    "standard-version": "9.3.2",
-    "typescript": "4.8.4"
+    "standard-version": "9.5.0",
+    "typescript": "4.9.5"
   },
   "resolutions": {
-    "@graasp/sdk": "github:graasp/graasp-sdk"
+    "@graasp/sdk": "0.3.0",
+    "immutable": "4.2.3"
   },
   "packageManager": "yarn@3.2.0"
 }
