--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
-    "@graasp/query-client": "0.1.4",
-    "@graasp/sdk": "0.3.0",
-    "@graasp/ui": "0.8.0",
+    "@graasp/query-client": "github:graasp/graasp-query-client#typeorm",
+    "@graasp/sdk": "github:graasp/graasp-sdk#typeorm",
+    "@graasp/ui": "github:graasp/graasp-ui#typeorm",
     "@mui/icons-material": "5.11.0",
     "@mui/lab": "5.0.0-alpha.118",
     "@mui/material": "5.11.7",
@@ -47,6 +47,7 @@
     "start:ci": "react-app-rewired -r @cypress/instrument-cra start",
     "build": "react-app-rewired build",
     "dist": "env-cmd -f ./.env.production react-app-rewired build",
+    "dist:dev": "env-cmd -f ./.env.dev react-app-rewired build",
     "eject": "react-scripts eject",
     "hooks:uninstall": "husky uninstall",
     "hooks:install": "husky install",
@@ -108,10 +109,6 @@
     "react-app-rewired": "2.2.1",
     "standard-version": "9.5.0",
     "typescript": "4.9.5"
-  },
-  "resolutions": {
-    "@graasp/sdk": "0.3.0",
-    "immutable": "4.2.3"
   },
   "packageManager": "yarn@3.2.0"
 }
