--- a/.eslintrc
+++ b/.eslintrc
@@ -1,22 +1,14 @@
 {
   "extends": [
+    "react-app",
     "airbnb",
-    "airbnb-typescript",
+    "plugin:import/typescript", // this is needed because airbnb uses eslint-plugin-import
+    "prettier",
     "eslint:recommended",
     "plugin:react/recommended",
-    "plugin:jsx-a11y/recommended",
-    "plugin:import/recommended",
-    "prettier",
-    "plugin:react/jsx-runtime",
     "plugin:@typescript-eslint/recommended"
   ],
-  "plugins": [
-    "import",
-    "@babel",
-    "react",
-    "jsx-a11y",
-    "@typescript-eslint"
-  ],
+  "plugins": ["@typescript-eslint"],
   "env": {
     "browser": true,
     "node": true,
@@ -28,28 +20,92 @@
     "Cypress": true
   },
   "parser": "@typescript-eslint/parser",
-  "rules": {
-    "import/no-named-as-default": 0,
-    "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": "error",
-    "react/jsx-filename-extension": [
-      1,
-      {
-        "extensions": [".js", ".jsx", ".tsx"]
-      }
-    ],
-    "react/function-component-definition":  
-      [2, { "namedComponents": "arrow-function" }],
-    "no-console": [1, { "allow": ["error"] }]
-  },
   "parserOptions": {
-    "project": "./tsconfig.eslint.json",
-    "requireConfigFile": false,
     "ecmaFeatures": {
       "jsx": true
     },
-    "babelOptions": {
-      "presets": ["@babel/preset-react"]
-   }
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "rules": {
+    "react/function-component-definition": [
+      2,
+      { "namedComponents": "arrow-function" }
+    ],
+    "import/extensions": "off",
+    "react/jsx-uses-react": "off",
+    "react/react-in-jsx-scope": "off",
+    // note you must disable the base rule as it can report incorrect errors
+    "no-use-before-define": "off",
+    "@typescript-eslint/no-use-before-define": ["error"],
+    // remove when possible
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/explicit-module-boundary-types": [
+      "error",
+      { "allowHigherOrderFunctions": true }
+    ],
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    ],
+    "import/no-named-as-default": 0,
+    "react/static-property-placement": [
+      "error",
+      "property assignment",
+      {
+        "childContextTypes": "static public field",
+        "contextTypes": "static public field",
+        "contextType": "static public field",
+        "defaultProps": "static public field",
+        "displayName": "static public field",
+        "propTypes": "static public field"
+      }
+    ],
+    "no-restricted-syntax": "off",
+    "react/state-in-constructor": ["error", "never"],
+    "no-console": [1, { "allow": ["error"] }],
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+    "react/prop-types": "off", // Since we do not use prop-types
+    "react/require-default-props": "off" // Since we do not use prop-types
+  },
+  "overrides": [
+    {
+      // enable the rule specifically for TypeScript files
+      "files": ["*.ts", "*.tsx"],
+      "rules": {
+        "@typescript-eslint/explicit-module-boundary-types": [
+          "error",
+          { "allowHigherOrderFunctions": true }
+        ]
+      }
+    },
+    {
+      // enable the rule specifically for src files
+      "files": ["src/**/*.js", "src/**/*.tsx", "src/**/*.ts"],
+      "rules": {
+        "no-restricted-syntax": ["error"]
+      }
+    },
+    {
+      // disable rules for JavaScript files
+      "files": ["src/**/*.js"],
+      "rules": { "@typescript-eslint/explicit-module-boundary-types": "off" }
+    }
+  ],
+  "settings": {
+    "import/extensions": [".js", ".jsx", ".ts", ".tsx"],
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    },
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true
+      },
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    }
   }
 }
