--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
-    "@graasp/query-client": "0.1.4",
-    "@graasp/sdk": "0.3.0",
+    "@graasp/query-client": "0.4.1",
+    "@graasp/sdk": "0.11.0",
     "@graasp/ui": "2.4.1",
     "@mui/icons-material": "5.11.0",
     "@mui/lab": "5.0.0-alpha.118",
@@ -21,11 +21,13 @@
     "@sentry/react": "7.36.0",
     "@sentry/tracing": "7.36.0",
     "google-map-react": "2.2.0",
+    "http-status-codes": "2.2.0",
     "i18next": "22.4.9",
-    "immutable": "4.2.3",
+    "immutable": "4.2.4",
     "lodash.capitalize": "4.2.1",
     "lodash.sortby": "4.7.0",
     "lodash.truncate": "4.4.2",
+    "miragejs": "0.1.45",
     "prop-types": "15.8.1",
     "qs": "6.11.0",
     "react": "18.2.0",
@@ -38,7 +40,8 @@
     "react-toastify": "9.1.1",
     "recharts": "2.3.2",
     "supercluster": "7.1.5",
-    "use-supercluster": "0.4.0"
+    "use-supercluster": "0.4.0",
+    "uuid": "9.0.0"
   },
   "scripts": {
     "pre-commit": "yarn prettier:check && yarn lint",
@@ -109,9 +112,8 @@
     "standard-version": "9.5.0",
     "typescript": "4.9.5"
   },
+  "packageManager": "yarn@3.2.0",
   "resolutions": {
-    "@graasp/sdk": "0.3.0",
-    "immutable": "4.2.3"
-  },
-  "packageManager": "yarn@3.2.0"
+    "immutable": "4.2.4"
+  }
 }
