--- a/package.json
+++ b/package.json
@@ -89,15 +89,16 @@
     "@trivago/prettier-plugin-sort-imports": "4.0.0",
     "@types/jest": "29.4.0",
     "@types/node": "18.11.18",
-    "@typescript-eslint/eslint-plugin": "5.50.0",
-    "@typescript-eslint/parser": "5.50.0",
+    "@typescript-eslint/eslint-plugin": "5.59.2",
+    "@typescript-eslint/parser": "5.59.2",
     "cross-env": "7.0.3",
     "cypress": "12.5.1",
     "env-cmd": "10.1.0",
-    "eslint": "8.33.0",
+    "eslint": "8.39.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "17.0.0",
     "eslint-config-prettier": "8.6.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-import-resolver-typescript": "3.5.3",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
