--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "@sentry/tracing": "7.36.0",
     "google-map-react": "2.2.0",
     "i18next": "22.4.9",
-    "immutable": "4.2.4",
+    "immutable": "4.3.0",
     "lodash.capitalize": "4.2.1",
     "lodash.sortby": "4.7.0",
     "lodash.truncate": "4.4.2",
     "prop-types": "15.8.1",
-    "qs": "6.11.0",
+    "qs": "6.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga": "3.3.1",
@@ -111,5 +111,8 @@
     "standard-version": "9.5.0",
     "typescript": "4.9.5"
   },
-  "packageManager": "yarn@3.2.0"
+  "packageManager": "yarn@3.2.0",
+  "resolutions": {
+    "@graasp/query-client": "portal:/Users/ray/graasp_repo/graasp-query-client"
+  }
 }
