--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
-    "@graasp/query-client": "1.0.0-rc1",
-    "@graasp/sdk": "1.0.0-rc1",
-    "@graasp/ui": "3.0.0-rc.2",
+    "@graasp/query-client": "1.0.1",
+    "@graasp/sdk": "1.1.0",
+    "@graasp/ui": "3.1.0",
     "@mui/icons-material": "5.11.0",
     "@mui/lab": "5.0.0-alpha.118",
     "@mui/material": "5.11.7",
@@ -22,7 +22,7 @@
     "@sentry/tracing": "7.36.0",
     "google-map-react": "2.2.0",
     "http-status-codes": "2.2.0",
-    "i18next": "22.4.9",
+    "i18next": "23.2.3",
     "immutable": "4.2.4",
     "lodash.capitalize": "4.2.1",
     "lodash.sortby": "4.7.0",
@@ -33,7 +33,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga": "3.3.1",
-    "react-i18next": "12.1.5",
+    "react-i18next": "13.0.1",
     "react-router-dom": "6.8.0",
     "react-scripts": "5.0.1",
     "react-select": "5.7.0",
@@ -55,7 +55,7 @@
     "hooks:uninstall": "husky uninstall",
     "hooks:install": "husky install",
     "lint": "eslint .",
-    "type-check": "tsc --noEmit",
+    "type-check": "tsc --noEmit && tsc --noEmit -p cypress/tsconfig.json",
     "prettier:check": "prettier --check 'src/**/*.js'",
     "prettier:write": "prettier --write 'src/**/*.js'",
     "release": "standard-version -a",
@@ -111,7 +111,7 @@
     "prettier": "2.8.3",
     "react-app-rewired": "2.2.1",
     "standard-version": "9.5.0",
-    "typescript": "4.9.5"
+    "typescript": "5.1.3"
   },
   "packageManager": "yarn@3.2.0",
   "resolutions": {
