--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "Po-Jui Chang"
   ],
   "dependencies": {
+    "@emotion/cache": "11.11.0",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
-    "@graasp/query-client": "1.0.1",
-    "@graasp/sdk": "1.1.0",
-    "@graasp/ui": "3.1.0",
+    "@graasp/query-client": "1.4.0",
+    "@graasp/sdk": "1.2.0",
+    "@graasp/translations": "1.18.1",
+    "@graasp/ui": "3.2.7",
     "@mui/icons-material": "5.11.0",
     "@mui/lab": "5.0.0-alpha.118",
     "@mui/material": "5.11.7",
@@ -23,22 +25,22 @@
     "google-map-react": "2.2.0",
     "http-status-codes": "2.2.0",
     "i18next": "23.2.3",
-    "immutable": "4.2.4",
+    "immutable": "4.3.1",
     "lodash.capitalize": "4.2.1",
     "lodash.sortby": "4.7.0",
     "lodash.truncate": "4.4.2",
     "miragejs": "0.1.45",
-    "prop-types": "15.8.1",
-    "qs": "6.11.0",
+    "qs": "6.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga": "3.3.1",
     "react-i18next": "13.0.1",
     "react-router-dom": "6.8.0",
     "react-scripts": "5.0.1",
-    "react-select": "5.7.0",
     "react-toastify": "9.1.1",
     "recharts": "2.3.2",
+    "stylis": "4.3.0",
+    "stylis-plugin-rtl": "2.1.1",
     "supercluster": "7.1.5",
     "use-supercluster": "0.4.0",
     "uuid": "9.0.0"
@@ -56,8 +58,8 @@
     "hooks:install": "husky install",
     "lint": "eslint .",
     "type-check": "tsc --noEmit && tsc --noEmit -p cypress/tsconfig.json",
-    "prettier:check": "prettier --check 'src/**/*.js'",
-    "prettier:write": "prettier --write 'src/**/*.js'",
+    "prettier:check": "prettier --check 'src/**/*.{js,tsx,ts}'",
+    "prettier:write": "prettier --write 'src/**/*.{js,tsx,ts}'",
     "release": "standard-version -a",
     "release:first": "standard-version -a --first-release",
     "release:minor": "standard-version -a --release-as minor",
@@ -80,8 +82,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/eslint-parser": "7.19.1",
-    "@babel/eslint-plugin": "7.19.1",
     "@commitlint/cli": "17.4.2",
     "@commitlint/config-conventional": "17.4.2",
     "@cypress/code-coverage": "3.10.0",
@@ -90,7 +90,10 @@
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
     "@trivago/prettier-plugin-sort-imports": "4.0.0",
+    "@types/google-map-react": "2.1.7",
     "@types/jest": "29.4.0",
+    "@types/lodash.capitalize": "4.2.7",
+    "@types/lodash.truncate": "4.4.7",
     "@types/node": "18.11.18",
     "@typescript-eslint/eslint-plugin": "5.50.0",
     "@typescript-eslint/parser": "5.50.0",
@@ -104,7 +107,6 @@
     "eslint-import-resolver-typescript": "3.5.3",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.27.1",
     "husky": "8.0.3",
     "istanbul-lib-coverage": "3.2.0",
     "nyc": "15.1.0",
@@ -113,8 +115,5 @@
     "standard-version": "9.5.0",
     "typescript": "5.1.3"
   },
-  "packageManager": "yarn@3.2.0",
-  "resolutions": {
-    "immutable": "4.2.4"
-  }
+  "packageManager": "yarn@3.2.0"
 }
