--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -1,6 +1,6 @@
 name: Deploy to development environment
 
-# Control when the action will run.
+# Control when the action will run
 on:
   # Triggers the workflow on push events only for the main branch
   push:
@@ -10,24 +10,41 @@ on:
   # Allows to run the workflow manually from the Actions tab
   workflow_dispatch:
 
-# This workflow is made up of one job that calls the reusable workflow in graasp-deploy
 jobs:
-  graasp-deploy-s3-workflow:
-    name: Graasp Analytics
-    # Reference reusable workflow file. Using the commit SHA is the safest for stability and security
-    uses: graasp/graasp-deploy/.github/workflows/cintegration-s3.yml@v1
-    with:
-      build-folder: 'build'
-    secrets:
-      aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_DEV }}
-      aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
-      aws-region: ${{ secrets.AWS_REGION_DEV }}
-      aws-s3-bucket-name: ${{ secrets.AWS_S3_BUCKET_NAME_GRAASP_RESEARCH_DEV }}
-      cloudfront-distribution-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_GRAASP_RESEARCH_DEV }}
-      api-host: ${{ secrets.REACT_APP_API_HOST_DEV }}
-      google-key: ${{ secrets.REACT_APP_GOOGLE_KEY_DEV }}
-      authentication-host: ${{ secrets.REACT_APP_AUTHENTICATION_HOST_DEV }}
-      graasp-perform-host: ${{ secrets.PLAYER_CLIENT_HOST_DEV }}
-      graasp-compose-host: ${{ secrets.BUILDER_CLIENT_HOST_DEV }}
-      graasp-explorer-host: ${{ secrets.EXPLORER_CLIENT_HOST_DEV }}
-      domain: ${{ secrets.REACT_APP_DOMAIN_DEV }}
+  deploy-app:
+    name: Deploy to dev
+    runs-on: ubuntu-latest
+    environment: development
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Yarn install and Cache dependencies
+        uses: graasp/graasp-deploy/.github/actions/yarn-install-and-cache@v1
+
+      - name: Yarn build
+        # Set environment variables required to perform the build. These are only available to this step
+        env:
+          VITE_VERSION: ${{ github.sha }}
+          VITE_GRAASP_DOMAIN: ${{ vars.GRAASP_DOMAIN }}
+          VITE_GRAASP_API_HOST: ${{ vars.GRAASP_API_HOST }}
+          VITE_GRAASP_AUTH_HOST: ${{ vars.GRAASP_AUTH_HOST }}
+          VITE_GRAASP_PLAYER_HOST: ${{ vars.GRAASP_PLAYER_HOST }}
+          VITE_GRAASP_LIBRARY_HOST: ${{ vars.GRAASP_LIBRARY_HOST }}
+          VITE_GRAASP_BUILDER_HOST: ${{ vars.GRAASP_BUILDER_HOST }}
+          VITE_SENTRY_ENV: ${{ vars.SENTRY_ENV }}
+          VITE_SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
+          VITE_GOOGLE_KEY: ${{ secrets.GOOGLE_KEY }}
+        run: yarn build
+        shell: bash
+
+      - name: Deploy
+        uses: graasp/graasp-deploy/.github/actions/deploy-s3@v1
+        # Replace input build-folder or version if needed
+        with:
+          build-folder: 'build'
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_DEV }}
+          aws-region: ${{ secrets.AWS_REGION_DEV }}
+          aws-s3-bucket-name: ${{ secrets.AWS_S3_BUCKET_NAME_GRAASP_RESEARCH_DEV }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
+          cloudfront-distribution-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_GRAASP_RESEARCH_DEV }}
