--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,31 +1,47 @@
 name: Deploy to production environment
-
-# Controls when the action will run
+# Control when the action will run
 on:
   # Triggers the workflow on repository-dispatch event
   repository_dispatch:
     types: [production-deployment]
 
-# This workflow is made up of one job that calls the reusable workflow in graasp-deploy
 jobs:
-  graasp-deploy-s3-workflow:
-    name: Graasp Analytics
-    # Reference reusable workflow file. Using the commit SHA is the safest for stability and security
-    uses: graasp/graasp-deploy/.github/workflows/cdeployment-s3.yml@v1
-    with:
-      build-folder: 'build'
-      tag: ${{ github.event.client_payload.tag }}
-    secrets:
-      aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
-      aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
-      aws-region: ${{ secrets.AWS_REGION_PROD }}
-      aws-s3-bucket-name: ${{ secrets.AWS_S3_BUCKET_NAME_GRAASP_RESEARCH_PROD }}
-      cloudfront-distribution-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_GRAASP_RESEARCH_PROD }}
-      api-host: ${{ secrets.REACT_APP_API_HOST_PROD }}
-      google-key: ${{ secrets.REACT_APP_GOOGLE_KEY_PROD }}
-      authentication-host: ${{ secrets.REACT_APP_AUTHENTICATION_HOST_PROD }}
-      graasp-perform-host: ${{ secrets.PLAYER_CLIENT_HOST_PROD }}
-      graasp-compose-host: ${{ secrets.BUILDER_CLIENT_HOST_PROD }}
-      graasp-explorer-host: ${{ secrets.EXPLORER_CLIENT_HOST_PROD }}
-      domain: ${{ secrets.REACT_APP_DOMAIN_PROD }}
+  deploy-app:
+    name: Deploy to production
+    runs-on: ubuntu-latest
+    environment: production
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.client_payload.tag }}
 
+      - name: Yarn install and Cache dependencies
+        uses: graasp/graasp-deploy/.github/actions/yarn-install-and-cache@v1
+
+      - name: Yarn build
+        # Set environment variables required to perform the build. These are only available to this step
+        env:
+          VITE_VERSION: ${{ github.event.client_payload.tag }}
+          VITE_GRAASP_DOMAIN: ${{ vars.GRAASP_DOMAIN }}
+          VITE_GRAASP_API_HOST: ${{ vars.GRAASP_API_HOST }}
+          VITE_GRAASP_AUTH_HOST: ${{ vars.GRAASP_AUTH_HOST }}
+          VITE_GRAASP_PLAYER_HOST: ${{ vars.GRAASP_PLAYER_HOST }}
+          VITE_GRAASP_LIBRARY_HOST: ${{ vars.GRAASP_LIBRARY_HOST }}
+          VITE_GRAASP_BUILDER_HOST: ${{ vars.GRAASP_BUILDER_HOST }}
+          VITE_SENTRY_ENV: ${{ vars.SENTRY_ENV }}
+          VITE_SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
+          VITE_GOOGLE_KEY: ${{ secrets.GOOGLE_KEY_PROD }}
+        run: yarn build
+        shell: bash
+
+      - name: Deploy
+        uses: graasp/graasp-deploy/.github/actions/deploy-s3@v1
+        # Replace input build-folder or version if needed
+        with:
+          build-folder: 'build'
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
+          aws-region: ${{ secrets.AWS_REGION_PROD }}
+          aws-s3-bucket-name: ${{ secrets.AWS_S3_BUCKET_NAME_GRAASP_RESEARCH_PROD }}
+          cloudfront-distribution-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_GRAASP_RESEARCH_PROD }}
