--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.2.1",
   "private": true,
   "author": "Graasp",
+  "engines": {
+    "node": ">=16"
+  },
   "contributors": [
     "Hagop Taminian",
     "Juan Carlos Farah",
@@ -11,63 +14,61 @@
   ],
   "dependencies": {
     "@emotion/cache": "11.11.0",
-    "@emotion/react": "11.10.5",
-    "@emotion/styled": "11.10.5",
-    "@graasp/query-client": "1.4.0",
+    "@emotion/react": "11.11.1",
+    "@emotion/styled": "11.11.0",
+    "@graasp/query-client": "1.4.1",
     "@graasp/sdk": "1.2.0",
     "@graasp/translations": "1.18.1",
-    "@graasp/ui": "3.2.7",
-    "@mui/icons-material": "5.11.0",
-    "@mui/lab": "5.0.0-alpha.118",
-    "@mui/material": "5.11.7",
-    "@sentry/react": "7.36.0",
-    "@sentry/tracing": "7.36.0",
-    "google-map-react": "2.2.0",
+    "@graasp/ui": "3.3.1",
+    "@mui/icons-material": "5.14.3",
+    "@mui/lab": "5.0.0-alpha.140",
+    "@mui/material": "5.14.5",
+    "@sentry/react": "7.64.0",
+    "google-map-react": "2.2.1",
     "http-status-codes": "2.2.0",
-    "i18next": "23.2.3",
-    "immutable": "4.3.1",
+    "i18next": "23.4.4",
+    "immutable": "4.3.2",
     "lodash.capitalize": "4.2.1",
     "lodash.sortby": "4.7.0",
     "lodash.truncate": "4.4.2",
-    "miragejs": "0.1.45",
-    "qs": "6.11.1",
+    "miragejs": "0.1.47",
+    "qs": "6.11.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-ga": "3.3.1",
-    "react-i18next": "13.0.1",
-    "react-router-dom": "6.8.0",
-    "react-scripts": "5.0.1",
-    "react-toastify": "9.1.1",
-    "recharts": "2.3.2",
+    "react-ga4": "2.1.0",
+    "react-i18next": "13.1.2",
+    "react-router-dom": "6.15.0",
+    "react-toastify": "9.1.3",
+    "recharts": "2.7.3",
     "stylis": "4.3.0",
     "stylis-plugin-rtl": "2.1.1",
-    "supercluster": "7.1.5",
+    "supercluster": "8.0.1",
     "use-supercluster": "0.4.0",
     "uuid": "9.0.0"
   },
   "scripts": {
-    "pre-commit": "yarn prettier:check && yarn lint",
-    "start": "env-cmd -f ./.env.local react-app-rewired start",
-    "start:test": "env-cmd -f ./.env.test react-app-rewired start",
-    "start:ci": "react-app-rewired -r @cypress/instrument-cra start",
-    "build": "react-app-rewired build",
-    "dist": "env-cmd -f ./.env.production react-app-rewired build",
-    "dist:dev": "env-cmd -f ./.env.dev react-app-rewired build",
-    "eject": "react-scripts eject",
+    "dev": "vite",
+    "start": "yarn dev",
+    "start:test": "vite --mode test",
+    "build": "vite build",
+    "build:dev": "vite build --mode development",
+    "build:test": "vite build --mode test",
+    "preview": "vite preview",
+    "preview:dev": "vite preview --mode development",
+    "preview:test": "vite preview --mode test",
+    "lint": "eslint .",
+    "pre-commit": "yarn prettier:check && yarn lint && yarn type-check",
     "hooks:uninstall": "husky uninstall",
     "hooks:install": "husky install",
-    "lint": "eslint .",
     "type-check": "tsc --noEmit && tsc --noEmit -p cypress/tsconfig.json",
+    "check": "yarn prettier:check && yarn lint && yarn type-check",
+    "test": "yarn build:test && concurrently -k -s first \"yarn preview:test\" \"yarn cypress:run\"",
+    "cypress": "yarn test",
+    "cypress:open": "env-cmd -f ./.env.test cypress open --browser chrome",
+    "cypress:run": "env-cmd -f ./.env.test cypress run --headless --browser chrome",
     "prettier:check": "prettier --check 'src/**/*.{js,tsx,ts}'",
     "prettier:write": "prettier --write 'src/**/*.{js,tsx,ts}'",
-    "release": "standard-version -a",
-    "release:first": "standard-version -a --first-release",
-    "release:minor": "standard-version -a --release-as minor",
-    "release:major": "standard-version -a --release-as major",
-    "release:patch": "standard-version -a --release-as patch",
-    "postinstall": "husky install",
-    "cypress:open": "env-cmd -f ./.env.test cypress open",
-    "cypress:run": "env-cmd -f ./.env.test cypress run --headless --browser chrome --spec \"cypress/e2e/*.cy.ts\""
+    "postinstall": "husky install"
   },
   "browserslist": {
     "production": [
@@ -82,38 +83,43 @@
     ]
   },
   "devDependencies": {
-    "@commitlint/cli": "17.4.2",
-    "@commitlint/config-conventional": "17.4.2",
-    "@cypress/code-coverage": "3.10.0",
-    "@cypress/instrument-cra": "1.4.0",
+    "@commitlint/cli": "17.7.1",
+    "@commitlint/config-conventional": "17.7.0",
+    "@cypress/code-coverage": "3.11.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
-    "@trivago/prettier-plugin-sort-imports": "4.0.0",
+    "@trivago/prettier-plugin-sort-imports": "4.2.0",
     "@types/google-map-react": "2.1.7",
-    "@types/jest": "29.4.0",
+    "@types/jest": "29.5.3",
     "@types/lodash.capitalize": "4.2.7",
     "@types/lodash.truncate": "4.4.7",
-    "@types/node": "18.11.18",
-    "@typescript-eslint/eslint-plugin": "5.50.0",
-    "@typescript-eslint/parser": "5.50.0",
+    "@types/node": "18.17.5",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
+    "@vitejs/plugin-react": "4.0.4",
     "cross-env": "7.0.3",
-    "cypress": "12.5.1",
+    "cypress": "12.17.4",
     "env-cmd": "10.1.0",
-    "eslint": "8.33.0",
+    "eslint": "8.47.0",
     "eslint-config-airbnb": "19.0.4",
-    "eslint-config-airbnb-typescript": "17.0.0",
-    "eslint-config-prettier": "8.6.0",
-    "eslint-import-resolver-typescript": "3.5.3",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-config-airbnb-typescript": "17.1.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-import-resolver-typescript": "3.6.0",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "husky": "8.0.3",
     "istanbul-lib-coverage": "3.2.0",
     "nyc": "15.1.0",
-    "prettier": "2.8.3",
-    "react-app-rewired": "2.2.1",
-    "standard-version": "9.5.0",
-    "typescript": "5.1.3"
+    "prettier": "3.0.2",
+    "rollup-plugin-visualizer": "5.9.2",
+    "typescript": "5.1.6",
+    "vite": "4.4.9",
+    "vite-plugin-checker": "0.6.1",
+    "vite-plugin-istanbul": "5.0.0"
+  },
+  "resolutions": {
+    "immutable": "4.3.2"
   },
   "packageManager": "yarn@3.2.0"
 }
