feat: updates to layout for lnco graasp and prettier update

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,7 +2,7 @@ checksumBehavior: update
 
 compressionLevel: mixed
 
-defaultSemverRangePrefix: ""
+defaultSemverRangePrefix: ''
 
 enableGlobalCache: false
 
