--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@emotion/styled": "11.13.0",
     "@graasp/query-client": "3.22.2",
     "@graasp/sdk": "4.26.0",
+    "@graasp/stylis-plugin-rtl": "^2",
     "@graasp/translations": "1.35.1",
-    "@graasp/ui": "4.26.0",
+    "@graasp/ui": "https://github.com/lnco-epfl/graasp-ui#1-update-ui-for-lnco-graasp",
     "@mui/icons-material": "5.16.7",
     "@mui/lab": "5.0.0-alpha.141",
     "@mui/material": "5.16.7",
+    "@popperjs/core": "2.11.8",
     "@sentry/react": "7.119.0",
     "date-fns": "3.6.0",
     "google-map-react": "2.2.1",
