fix: update analytics layout to fit LNCO.ai look and remove library references

--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "@graasp/sdk": "4.32.1",
     "@graasp/stylis-plugin-rtl": "2.2.0",
     "@graasp/translations": "1.39.0",
-    "@graasp/ui": "5.2.1",
+    "@graasp/ui": "https://github.com/lnco-epfl/graasp-ui",
     "@mui/icons-material": "5.16.7",
     "@mui/lab": "5.0.0-alpha.141",
     "@mui/material": "5.16.7",
-    "@sentry/react": "7.119.1",
-    "date-fns": "4.1.0",
+    "@popperjs/core": "2.11.8",
+    "@sentry/react": "7.119.0",
+    "date-fns": "3.6.0",
     "google-map-react": "2.2.1",
     "http-status-codes": "2.3.0",
     "i18next": "23.15.2",
